[tool.poetry]
name = "python-utils"
version = "2.5.6"
description = "Python Utils is a module with some convenient utilities not included with the standard Python install"
authors = ["Rick van Hattem <Wolph@wol.ph>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.6"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "flake8"
flake8 = "^4.0.1"
Sphinx = "^4.2.0"
pytest-cov = "^3.0.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
