[aliases]
test=pytest

[metadata]
description-file = README.rst

[nosetests]
verbosity=3
with-doctest=1
with-coverage=1
cover-package=python_utils
cover-min-percentage=100
detailed-errors=1
debug=nose.loader
pdb=1
# pdb-failures=1

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

[bdist_wheel]
universal = 1

[upload]
sign = 1

[flake8]
per-file-ignores =
    python_utils/types.py: F403,F405
ignore = W391, W503, E741, E203, F811
exclude =
    docs

[mypy]
files =
    python_utils,
    _python_utils_tests
